feat: streamline the user profile

--- a/frontend/src/components/UserIdentifier/UserIdentifier.module.scss
+++ b/frontend/src/components/UserIdentifier/UserIdentifier.module.scss
@@ -2,39 +2,27 @@
 	align-items: center;
 	display: flex;
 	gap: var(--size-xxSmall);
-}
-
-.identifierContainer::before,
-.identifierContainer::after {
-	align-self: center;
-	border: 1px solid var(--color-gray-300);
-	content: '';
-	height: 1em;
+	width: 100%;
 }
 
 .identifierButton {
 	color: var(--color-purple);
 	max-width: calc(100% - 1.2em - 2 * var(--size-xxSmall));
 
-	order: -1;
 	padding: 0;
 
 	> span {
+		font-weight: 500;
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
 }
 
 .identifierActionButton {
-	color: inherit !important;
 	height: 1.2em !important;
 	width: 1.2em !important;
 	svg {
-		color: inherit;
+		color: var(--color-gray-500);
 		height: 1em !important;
 	}
-}
-
-.identifierSearchButton {
-	order: 1;
 }
