Add histogram to session and errors feed (#3001)
Adds a histogram of search results to the sessions and errors feed. Histogram supports zooming with auto-adjusting granularity, and the zoom reissues search queries each time. UI is gated to highlight admins only!

--- a/frontend/src/pages/Errors/ErrorFeedV2/ErrorFeedV2.module.scss
+++ b/frontend/src/pages/Errors/ErrorFeedV2/ErrorFeedV2.module.scss
@@ -109,6 +109,7 @@
 	align-items: center;
 	display: flex;
 	flex-shrink: 1;
+	margin-top: var(--size-medium);
 	padding-bottom: var(--size-xSmall);
 	position: relative;
 }
@@ -226,6 +227,5 @@
 	display: flex;
 	flex-shrink: 1;
 	flex-wrap: wrap;
-	margin-bottom: var(--size-medium);
 	row-gap: var(--size-small);
 }
