--- a/frontend/src/style/tailwind.css
+++ b/frontend/src/style/tailwind.css
@@ -1,4 +1,4 @@
 /* stylelint-disable scss/at-rule-no-unknown */
-@tailwind base;
+/* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
