disable lint on overrides

--- a/frontend/src/style/AntDesign/antd.overrides.less
+++ b/frontend/src/style/AntDesign/antd.overrides.less
@@ -1,3 +1,4 @@
+/* stylelint-disable scss/at-rule-no-unknown */
 // These variables are used to override Ant Design's default variables.
 // Changes to this file requires you to restart the React dev server for the effects to take place in the browser.
 
