feat(HIG-2614): add a button to find all user sessions (#2965)
* feat: add a button to find all user sessions

* fix: alignment

* feat: streamline the user profile

* fix: polish enhanced user details

* fix: simplify design

* fix: spacing

* fix: capitalization

--- a/frontend/src/components/UserIdentifier/UserIdentifier.module.scss
+++ b/frontend/src/components/UserIdentifier/UserIdentifier.module.scss
@@ -1,10 +1,22 @@
-.button {
-	color: var(--color-purple);
-	max-width: calc(100% - 1.2em - 2 * var(--size-xxSmall));
-	padding: 0;
+.identifierContainer {
+	align-items: center;
+	display: flex;
+	gap: var(--size-xxSmall);
+	width: 100%;
+}
 
-	> span {
-		overflow: hidden;
-		text-overflow: ellipsis;
+.identifier {
+	font-weight: 500;
+	max-width: calc(100% - 1.2em - 2 * var(--size-xxSmall));
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.identifierActionButton {
+	height: 1.2em !important;
+	width: 1.2em !important;
+	svg {
+		color: var(--color-gray-500);
+		height: 1em !important;
 	}
 }
