--- a/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
+++ b/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
@@ -1,4 +1,5 @@
 $backfill-height: 30px;
+$avatar-size: 36px;
 
 .userBox {
 	background-color: var(--color-primary-background);
@@ -53,11 +54,13 @@ $backfill-height: 30px;
 }
 
 .avatar {
-	height: 36px;
-	width: 36px;
+	height: $avatar-size;
+	width: $avatar-size;
 }
 
 #enhancedName {
+	align-items: center;
+	display: flex;
 	font-weight: 400 !important;
 	margin-bottom: 0 !important;
 }
@@ -80,11 +83,12 @@ $backfill-height: 30px;
 .enhancedTextSection {
 	display: flex;
 	flex-direction: column;
-	row-gap: var(--size-xxSmall);
+	padding-left: calc($avatar-size + var(--size-small));
+	row-gap: var(--size-small);
 }
 
 .userEnhanced {
-	padding: 16px 28px;
+	padding: var(--size-medium);
 	position: relative;
 }
 
@@ -112,13 +116,9 @@ $backfill-height: 30px;
 .userMainSection {
 	border-bottom: 1px solid var(--color-gray-300);
 	box-sizing: border-box;
-	column-gap: var(--size-small);
 	display: flex;
 	flex-direction: row;
-	padding-bottom: var(--size-medium);
-	padding-left: 22px;
-	padding-right: 22px;
-	padding-top: var(--size-medium);
+	padding: var(--size-medium);
 }
 
 .userDetailsSection {
@@ -166,7 +166,10 @@ $backfill-height: 30px;
 	display: flex;
 	flex-direction: column;
 	font-weight: 400;
-	padding-right: 20px;
+	max-width: calc(
+		var(--right-panel-width) - $avatar-size - 2 * var(--size-medium)
+	);
+	padding-left: var(--size-small);
 	row-gap: var(--size-xxSmall);
 	width: 100%;
 }
@@ -180,21 +183,23 @@ $backfill-height: 30px;
 }
 
 .userIdHeader {
+	align-items: center;
 	color: var(--text-primary);
+	display: flex;
+	flex-wrap: nowrap;
 	font-size: 14px;
 	font-weight: 300;
 	margin: 0;
 	text-overflow: ellipsis;
 	white-space: nowrap;
-	// Spacing for the star icon.
-	width: calc(100% - 50px);
+	width: 100%;
 }
 
 .userIdSubHeader {
 	color: var(--color-gray-500);
 	display: block;
 	font-size: 12px;
-	line-height: 17px;
+	line-height: 17px !important;
 	margin: 0 !important;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -232,7 +237,10 @@ $backfill-height: 30px;
 }
 
 .starIconWrapper {
-	width: var(--size-medium);
+	flex-shrink: 0;
+	height: var(--size-medium) !important;
+	margin-left: auto;
+	width: var(--size-medium) !important;
 
 	&:hover {
 		cursor: pointer;
@@ -240,15 +248,13 @@ $backfill-height: 30px;
 }
 
 .starredIcon {
-	color: var(--color-yellow-200);
-	fill: var(--color-yellow-200);
-	stroke: var(--color-yellow-200);
+	color: var(--color-yellow-300);
+	fill: var(--color-yellow-300);
+	stroke: var(--color-yellow-300);
 }
 
 .unstarredIcon {
-	color: var(--color-gray-500);
 	fill: var(--color-gray-500);
-	stroke: var(--color-gray-500);
 }
 
 .deviceDetails {
@@ -261,11 +267,27 @@ $backfill-height: 30px;
 	margin-top: 0;
 }
 
+.viewAllSessionsButton {
+	color: var(--color-purple) !important;
+	display: flex;
+	font-size: var(--size-small);
+	gap: var(--size-xxSmall);
+	left: -1px;
+	line-height: 15px !important;
+	max-width: min-content;
+	padding: 0;
+	span {
+		display: block;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
+}
+
 .tooltip {
 	color: var(--color-gray-500);
-	position: absolute;
-	right: var(--size-medium);
-	top: var(--size-medium);
+	display: flex;
+	margin-left: auto;
 }
 
 .blurred {
