move metric view delete button

--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -192,6 +192,7 @@
 	border-bottom: 10px solid var(--color-gray-300);
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
+	border-radius: 8px;
 	bottom: 6px;
 	position: absolute;
 	right: 0;
