edit new home dashboard (#2941)
* loading state of home dashboard components should match dashboard charts
* session/errors charts should use the dashboard graphs
* convert to bar charts
* bottom right drag controller should be replaced with two … icons
* chart header sizes should be the same
* font size should be same in rage clicks
* some prebuilt components should not be resizable
* remove prebuilt components from types and do not allow deleting them
* key perf indicators - user stats title with same loading state
* round edit triangles
* make delete metric view a separate button
* make add metric view button open edit modal
* fix history back/forward breaking dashboard loading
* create prebuild dashboard for frontend request metrics
* get rid of react-grid animation for dashboards

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -30,12 +30,6 @@
 	justify-content: center;
 }
 
-.draggableOverlay {
-	position: absolute;
-	right: var(--size-medium);
-	top: 18px;
-}
-
 .overlayButton {
 	position: absolute;
 	right: var(--size-xLarge);
@@ -67,23 +61,6 @@
 .description {
 	color: var(--color-gray-500) !important;
 	margin-top: 0 !important;
-}
-
-.chartButtons {
-	align-items: center;
-	display: flex;
-	justify-content: flex-end;
-	width: 300px;
-
-	button {
-		height: var(--size-xLarge);
-		padding: var(--size-small);
-	}
-
-	ul li {
-		height: var(--size-xLarge);
-		padding: var(--size-small);
-	}
 }
 
 .monitorItem {
@@ -144,9 +121,10 @@
 }
 
 .mainHeaderContent {
-	align-items: center;
+	align-items: flex-start;
 	display: flex;
 	justify-content: space-between;
+	min-height: 52px;
 	padding: 10px 10px 10px 20px;
 	width: 100%;
 }
@@ -172,6 +150,7 @@
 	font-size: 16px;
 	font-weight: 500;
 	overflow: hidden;
+	padding-top: 2px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
@@ -191,4 +170,9 @@
 
 .blurChart {
 	filter: blur(2px);
+}
+
+.fixedSize {
+	min-height: 180px;
+	min-width: 600px;
 }
