--- a/frontend/src/pages/Home/components/EmptyCardPlaceholder/EmptyCardPlaceholder.module.scss
+++ b/frontend/src/pages/Home/components/EmptyCardPlaceholder/EmptyCardPlaceholder.module.scss
@@ -6,6 +6,6 @@
 }
 
 .graphicContainer {
-	margin-bottom: var(--size-medium);
-	margin-top: var(--size-xSmall);
+	margin-bottom: var(--size-xLarge);
+	margin-top: var(--size-xLarge);
 }
