--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -187,3 +187,19 @@
 .pillButtonTextVisible {
 	opacity: 1;
 }
+
+.resize {
+	border-bottom: 10px solid var(--color-gray-300);
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-radius: 8px;
+	bottom: 6px;
+	position: absolute;
+	right: 0;
+	transform: rotate(135deg);
+	transition: border-bottom ease-in-out 0.2s;
+
+	&:hover {
+		border-bottom: 10px solid var(--color-purple-400);
+	}
+}
