--- a/frontend/src/pages/Home/components/ActiveUsersTable/ActiveUsersTable.module.scss
+++ b/frontend/src/pages/Home/components/ActiveUsersTable/ActiveUsersTable.module.scss
@@ -14,7 +14,7 @@
 	column-gap: var(--size-xxSmall);
 	display: flex;
 	justify-content: center;
-	width: 100%;
+	width: fit-content;
 }
 
 .loading {
