improve styling of home page tables (#3041)
even on the smallest viewport where the grid is arranged as `lg`, we now get no overlap of the columns

![image](https://user-images.githubusercontent.com/1351531/189455948-66465d3b-0d7a-4b74-977c-8a2fd6fff6c8.png)

on large viewports, still looks ok

![image](https://user-images.githubusercontent.com/1351531/189455964-62d68906-e6b5-4533-8d8a-fd6d4d4c55c0.png)

--- a/frontend/src/pages/Home/components/ActiveUsersTable/ActiveUsersTable.module.scss
+++ b/frontend/src/pages/Home/components/ActiveUsersTable/ActiveUsersTable.module.scss
@@ -2,6 +2,7 @@
 	align-items: center;
 	column-gap: var(--size-xxSmall);
 	display: flex;
+	padding-right: 2rem;
 
 	span {
 		overflow: hidden;
@@ -14,7 +15,7 @@
 	column-gap: var(--size-xxSmall);
 	display: flex;
 	justify-content: center;
-	width: 100%;
+	width: fit-content;
 }
 
 .loading {
