Update login page design (#3010)
* add astronaut

* remove prettier plugin from config

we have formatting enforced elsewhere

* add tailwindcss

* login/landing updates

* remove dup key

* remove some leftover css classes

* remove astronaut image

* add poppins font

* update login design

* empty commit to fix workflow runs

--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -6,11 +6,6 @@
 	width: 100vw;
 }
 
-.loginPage {
-	min-height: 462px;
-	width: 450px;
-}
-
 .loginTitle {
 	font-size: 23px;
 }
@@ -29,6 +24,9 @@
 	flex-direction: column;
 	padding: 30px;
 	transition: all 0.2s ease-in-out;
+	max-width: 420px;
+	height: fit-content;
+	margin: auto;
 }
 
 .loginForm {
