--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -78,8 +78,8 @@
 	--color-link: var(--color-purple);
 
 	// Logo
-	--logo-gradient-start-color: var(--color-purple);
-	--logo-gradient-end-color: #321873;
+	--logo-background-color: #6c37f4;
+	--logo-border-color: #0b0222;
 
 	--color-brand-pastel-dark: #bcb3d3;
 
