--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -188,11 +188,15 @@
 	opacity: 1;
 }
 
+.settingsDropdownMenu :global(.ant-dropdown-menu-item) {
+	padding: 0 !important;
+}
+
 .resize {
 	border-bottom: 10px solid var(--color-gray-300);
 	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
 	border-radius: 8px;
+	border-right: 10px solid transparent;
 	bottom: 6px;
 	position: absolute;
 	right: 0;
