--- a/frontend/src/pages/Player/SessionLevelBar/SessionLevelBar.module.scss
+++ b/frontend/src/pages/Player/SessionLevelBar/SessionLevelBar.module.scss
@@ -1,4 +1,4 @@
-.sessionLevelBarContainer {
+.sessionLevelBarLink {
 	align-items: center;
 	background: var(--color-primary-background);
 	border: 1px solid var(--color-gray-300);
@@ -38,7 +38,7 @@
 	padding: 0 var(--size-large);
 }
 
-.container {
+.sessionLevelBarContainer {
 	align-items: center;
 	column-gap: var(--size-medium);
 	display: flex;
