--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -59,7 +59,6 @@
 	margin-left: 32px;
 	margin-right: 32px;
 	position: relative;
-	width: 100%;
 }
 
 .eventTrack {
@@ -121,7 +120,6 @@
 	flex-direction: column;
 	height: 103px;
 	position: absolute;
-	width: 56px;
 }
 .timeIndicatorHair {
 	border-left: 1px var(--color-black) solid;
@@ -143,5 +141,6 @@
 	height: 24px;
 	justify-content: center;
 	line-height: 15.6px;
+	padding: 8px;
 	user-select: none;
 }
