feat: add popovers

--- a/frontend/src/Common.module.scss
+++ b/frontend/src/Common.module.scss
@@ -1,6 +1,7 @@
 .bodyWrapper {
 	display: flex;
 	height: 100%;
+	overflow: hidden;
 	padding-left: var(--sidebar-width);
 	position: absolute;
 	width: 100%;
