--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
@@ -1,20 +1,38 @@
 .bar {
 	align-items: center;
-	border-radius: 0.2em;
+	border-radius: 0.5em;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
 	justify-content: flex-end;
 	overflow: hidden;
+	padding: 1px;
 	position: absolute;
+}
+
+.isFramed {
+	border: 1px solid var(--color-black);
+	padding: 0;
 }
 
 .rectangleContainer {
 	border-radius: 0.2em;
+	margin: 3px;
 	overflow: hidden;
-	width: 100%;
+	width: calc(100% - 6px);
 }
 
 .barRectangle {
 	cursor: pointer;
+}
+
+.eventAggregateTitle {
+	margin: 0;
+	width: 100%;
+}
+
+.timelineBarPopoverContainer {
+	:global(.ant-popover-inner-content) {
+		padding: 4px !important;
+	}
 }
