--- a/frontend/src/pages/IntegrationsPage/components/VercelIntegration/VercelIntegrationConfig.module.scss
+++ b/frontend/src/pages/IntegrationsPage/components/VercelIntegration/VercelIntegrationConfig.module.scss
@@ -19,3 +19,9 @@
 	display: inline-flex !important;
 	height: 100%;
 }
+
+.select {
+	:global(.ant-select-selection-item-content) {
+		max-width: 150px;
+	}
+}
