fix: time indicator

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -63,6 +63,10 @@
 	--color-gray-800: #2d2f36;
 	--color-black: #111;
 	--color-white: #fff;
+	--color-n-100: #e9e9e9;
+	--color-n-200: #dddddd;
+	--color-n-300: #a4a4a4;
+	--color-n-900: #1a1a1a;
 
 	// Editor Color
 	--color-editor-background: #fafafa;
