--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
@@ -1,29 +1,28 @@
 .bar {
 	align-items: center;
-	border-radius: 0.5em;
 	display: flex;
 	flex-direction: column;
 	height: 100%;
 	justify-content: flex-end;
 	overflow: hidden;
-	padding: 1px;
 	position: absolute;
 }
 
-.isFramed {
-	border: 1px solid var(--color-black);
-	padding: 0;
+.isShaded {
+	background-color: var(--color-n-100);
 }
 
 .rectangleContainer {
 	border-radius: 0.2em;
 	margin: 2px;
+	margin-top: 8px;
 	overflow: hidden;
 	width: calc(100% - 4px);
 }
 
 .barRectangle {
 	cursor: pointer;
+	margin-bottom: 2px;
 }
 
 .eventAggregateTitle {
