fix: time indicator

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -66,6 +66,7 @@
 	--color-n-100: #e9e9e9;
 	--color-n-200: #dddddd;
 	--color-n-300: #a4a4a4;
+	--color-n-800: #2c2c2c;
 	--color-n-900: #1a1a1a;
 
 	// Editor Color
