--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -25,6 +25,7 @@
 
 .progressBarContainer {
 	background-color: var(--color-purple-200);
+	border-radius: 1px 1px 0 0;
 	height: var(--progress-bar-height);
 	position: relative;
 	width: 100%;
