--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineBar/TimelineBar.module.scss
@@ -14,6 +14,8 @@
 
 .rectangleContainer {
 	border-radius: 0.2em;
+	display: flex;
+	flex-direction: column;
 	margin: 2px;
 	margin-top: 8px;
 	overflow: hidden;
